@@ -3822,6 +3822,7 @@ phone_number VARCHAR(18),
 scrub_date DATETIME NOT NULL,
 flag_invalid ENUM('','0','1') default '',
 flag_dnc ENUM('','0','1') default '',
+flag_projdnc ENUM('','0','1') default '',
 flag_litigator ENUM('','0','1') default '',
 full_response VARCHAR(255) default '',
 index(phone_number),
