@@ -427,5 +427,8 @@ index(phone_number),
 index(scrub_date)
 ) ENGINE=MyISAM;
 
-UPDATE system_settings SET db_schema_version='1519',db_schema_update_date=NOW() where db_schema_version < 1517;
+ALTER TABLE vicidial_dnccom_scrub_log ADD flag_projdnc ENUM('','0','1') default '' AFTER flag_dnc;
+
+UPDATE system_settings SET db_schema_version='1519',db_schema_update_date=NOW() where db_schema_version < 1519;
+
 
